5 for re-grading

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1390,11 +1390,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Big Mountain currently charges $81, and modelling suggests that a price increase of about $5-15 could be supported given Big Mountain's strong competitive edge in offering a relatively high amount of key features that market prices suggest people will pay more for. This analysis is based on comparing Big Mountain's prices and features to other resorts and therefore acting on the modelled findings would require operating on an assumption that other resorts wisely price their tickets. A better option would be to do a bit of further analysis that does make meaningful use of the current model but also takes into consideration operating costs. \n",
+    "**A: 1** The random forest model selected previously was fit on all available data, minus BMR’s row. Then, the model was used to predict BMR’s ticket price. The predicted ticket price given all other BMR data was $96.32, which about $15 more than the current price BMR charges, $81. The mean absolute error of the model is $10.41, which still leaves a price increase of $5 seeming feasible given the resort’s strong competitive edge in offering a relatively high amount of key features that market prices suggest people will pay more for. Specifically, during model training, the linear and random forest models identified the following features as meaningfully connected to ticket prices: vertical drop, snow making area, total chairs and runs, longest run length, and the number of fast quads. Upon inspecting a histogram of each of these features, it is clear that BMR is significantly above average in all areas. \n",
     "\n",
-    "Based on the data we currently have, however, there are some avenues that seem promising for reducing operating costs while even raising prices: Closing one lift would likely have a negligible impact on the ticket price BMR could charge, and closing up to 5 would likely only negatively impact revenue per ticket by $1. Adding to the length of the longest run could justify a $2 ticket price increase; adding more artificial snow to that section of the run might not provided added benefit. (We haven't, however, analyzed data for \"the longest run that has artifical snow,\" because that wasn't included in the dataset, but it could be useful to find that information if possible.) \n",
+    "Note: This analysis is based on comparing Big Mountain's prices and features to other resorts, and therefore acting on the modeled findings would require operating on an assumption that other resorts wisely price their tickets. A better option would be to do a bit of further analysis that does make meaningful use of the current model but also takes into consideration operating costs. \n",
     "\n",
-    "In general, adding acerage to snow making capabilities isn't likely to support higher ticket prices. This may be related to the fact that among all the features BMR boasts, snow maker-covered acerage is already especially high. "
+    "Based on the data we currently have, however, there are some avenues that seem promising for reducing operating costs while even raising prices. Functions were created to apply the random forest model to predict the change in ticket price if certain of BMR’s features changed quantitative. The results were as follows: \n",
+    "\n",
+    "- Closing one lift would likely have a negligible impact on the ticket price BMR could charge, and closing up to 5 would likely only negatively impact revenue per ticket by $1. The prediction if BMR had 6 fewer lifts than they currently have is that expected revenue would drop by an additional $1.50 compared to if they just remove 5 lifts.\n",
+    "- Adding a run and lift in order to increase the vertical drop by 150 feet could justify a $2 ticket price increase based upon the model’s prediction for what would happen to ticket prices if these changes were made.\n",
+    "\n",
+    "Predictions for two proposed changes, based on the model, would result in a $0 expected change in ticket price. Adding more artificial snow to a new run might not provided added benefit. (We haven't, however, analyzed data for \"the longest run that has artificial snow,\" because that wasn't included in the dataset, but it could be useful to find that information if possible.) In fact, in general, adding acreage to snow making capabilities isn't likely to support higher ticket prices. This may be related to the fact that among all the features BMR boasts, snow maker-covered acreage is already especially high. \n"
    ]
   },
   {
@@ -1415,7 +1420,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: 2** The primary data source that should still be analyzed is more detailed information on current and projected operating costs. It seems that increasing vertical drop by adding a run could justify an increase in ticket price, but predicted revenue increases should be weighed against predicted additions in operating costs for the additional run. \n",
+    "\n",
+    "It may be wise to consider making the new lift for the new run a fast quad since the number of fast quads seems to drive up ticket prices. However, domain knowledge  and understanding of the existing resort layout would be useful here. Since the proposal is to make an extension to the vertical drop, are nearby lifts also fast quads? If not, is it awkward to have mis-matched lifts, or is it no big deal? And of course, what are the relative operating costs of various lift types?\n",
+    "\n",
+    "As discussed in the summary, these findings are based on analyzing other resorts’ pricing structures. How was the current price of $81 arrived at originally? Do BMR executives believe that other resorts are making wise choices? Or is it strategic to set a price below what a comparison with other resorts’ prices and features suggest BMR “could” “get away with” charging? A conversation about the broader  strategic landscape within the business would be helpful in understanding how all this data analysis might best be presented to executives. \n",
+    "\n",
+    "Finally, predictions on impact on ticket prices were only made for 4 proposed facilities changes. It’s not clear to me how these 4 changes were determined, and it would be helpful to better understand that decision-making process. For example, there’s a big difference between data-void guesses as to which changes might help compared with analysis based on searching for areas with unnecessarily high operating costs or based on customer feedback, survey, or facilities usage data.\n",
+    "\n",
+    "I’m curious if executives are interested in using more of the findings about features that seem correlated with higher ticket prices to generate additional facilities adjustment scenarios. With the code in its current form, it should be quite simple for anybody with some python knowledge to generate further predictions using the model, just as I did for the 4 given proposals. "
    ]
   }
  ],
